--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -61,10 +61,10 @@
         android:layout_marginRight="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:textColor="@android:color/white"
         android:background="@drawable/rounded_button"
-        android:text="@string/connection_button"
-        android:onClick="signUp"
+        android:onClick="signIn"
+        android:text="@string/register_button"
+        android:textColor="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText7" />
@@ -76,10 +76,10 @@
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginTop="16dp"
-        android:onClick="sendToRegistration"
-        android:textColor="@android:color/white"
-        android:text="@string/register_button"
         android:background="@drawable/rounded_button"
+        android:onClick="sendToConnection"
+        android:text="@string/connection_button"
+        android:textColor="@android:color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
