--- a/app/src/main/res/layout/activity_connection.xml
+++ b/app/src/main/res/layout/activity_connection.xml
@@ -65,7 +65,7 @@
         android:textColor="@android:color/white"
         android:background="@drawable/rounded_button"
         android:text="@string/connection_button"
-        android:onClick="signUp"
+        android:onClick="signIn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editText7" />
