Lets work again

--- a/app/src/main/res/layout/activity_streamer.xml
+++ b/app/src/main/res/layout/activity_streamer.xml
@@ -14,7 +14,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/round_button"
-        android:onClick="goToHome"
+        android:onClick="goToPlaylistDisplay"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_arrow_back_black_24dp" />
@@ -26,7 +26,6 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="16dp"
         android:background="@drawable/round_button"
-        android:onClick="goToHome"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/ibNextSong"
         app:layout_constraintHorizontal_bias="0.5"
@@ -78,7 +77,7 @@
         android:layout_marginStart="8dp"
         android:text="TextView"
         android:textColor="@color/colorPrimary"
-        android:textSize="16sp"
+        android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/textView6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -87,22 +86,22 @@
         android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="4dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:text="TextView"
         android:textColor="@android:color/black"
-        android:textSize="20sp"
+        android:textSize="26sp"
         app:layout_constraintBottom_toTopOf="@+id/tvArtist"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <ImageView
         android:id="@+id/ivAlbumCover"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="339dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="16dp"
         android:layout_marginLeft="16dp"
@@ -121,6 +120,7 @@
         android:layout_marginBottom="8dp"
         android:gravity="right"
         android:text="0:00"
+        android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/imageButton8"
         app:layout_constraintEnd_toStartOf="@+id/textView6"
         app:layout_constraintHorizontal_bias="0.5"
@@ -132,6 +132,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:text="/"
+        android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/audioStreamBtn"
         app:layout_constraintEnd_toStartOf="@+id/tvDuration"
         app:layout_constraintHorizontal_bias="0.5"
@@ -143,8 +144,27 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:text="3:56"
+        android:textSize="18sp"
         app:layout_constraintBottom_toTopOf="@+id/ibNextSong"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/textView6" />
+
+    <TextView
+        android:id="@+id/tvPlaylist"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="24dp"
+        android:gravity="center"
+        android:text="TextView"
+        android:textColor="@color/colorPrimary"
+        android:textSize="28sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/imageButton5"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
