--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -109,7 +109,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imageButton2" />
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/rvAnimals"
+        android:id="@+id/rvPlaylist"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginBottom="16dp"
