--- a/app/src/main/res/layout/activity_friend_management.xml
+++ b/app/src/main/res/layout/activity_friend_management.xml
@@ -148,7 +148,7 @@
         android:layout_marginRight="16dp"
         android:layout_marginTop="32dp"
         android:background="@drawable/small_round_button"
-        android:onClick="addFriend"
+        android:onClick="checkFriendEmail"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3"
         app:srcCompat="@drawable/ic_add_white" />
