--- a/app/src/main/res/layout/activity_friend_management.xml
+++ b/app/src/main/res/layout/activity_friend_management.xml
@@ -45,7 +45,6 @@
         android:layout_marginRight="16dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/round_button"
-        android:onClick="goToFriendManagement"
         app:layout_constraintEnd_toStartOf="@+id/button3"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_group_white"
@@ -136,12 +135,12 @@
         android:layout_marginTop="24dp"
         android:hint="@string/friendEmail"
         android:inputType="textEmailAddress"
-        app:layout_constraintEnd_toStartOf="@+id/imageButton7"
+        app:layout_constraintEnd_toStartOf="@+id/deleteButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <ImageButton
-        android:id="@+id/imageButton7"
+        android:id="@+id/deleteButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
