--- a/app/src/main/res/layout/recycler_friend_row.xml
+++ b/app/src/main/res/layout/recycler_friend_row.xml
@@ -1,17 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
 xmlns:android="http://schemas.android.com/apk/res/android"
-android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
 android:layout_height="wrap_content"
 android:orientation="horizontal"
 android:padding="10dp">
 
-<TextView
-    android:id="@+id/tvUsername"
-    android:layout_width="213dp"
-    android:layout_height="wrap_content"
-    android:layout_weight="1"
-    android:text="TextView"
-    android:textColor="@android:color/black"
-    android:textSize="20sp" />
+    <TextView
+        android:id="@+id/tvUsername"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="100"
+        android:text="TextView"
+        android:textColor="@android:color/black"
+        android:textSize="20sp" />
+
+    <ImageButton
+        android:id="@+id/deleteButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:background="@drawable/small_round_button"
+        app:srcCompat="@drawable/ic_delete_white" />
 </LinearLayout>
