--- a/app/src/main/res/layout/activity_streamer.xml
+++ b/app/src/main/res/layout/activity_streamer.xml
@@ -184,6 +184,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginTop="48dp"
         android:background="@drawable/round_button"
+        android:onClick="goToShareSong"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ivAlbumCover"
         app:srcCompat="@drawable/ic_share_black_24dp" />
